<resources>
    <string name="app_name">Aexe</string>
    <string name="title_activity_navigation_drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_feed">News Feed</string>
    <string name="menu_exercise">Augmented Reality</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_support">Help and Support</string>
    <string name="menu_logout">Logout</string>

    //About Us Fragment
    <string name="address">#47 CRJM PILAR MORNING BREEZE Brgy. 085, Dist. 1, Caloocan City Caloocan, Philippines, 1400</string>
    <string name="facebook"><a href="fb.com/Zamora Fitness Drive and Wellness Center">Zamora Fitness Drive and Wellness Center</a></string>
    <string name="gmail"><a href="zamorafitnessdrive@gmail.com">zamorafitnessdrive@gmail.com</a></string>
    <string name="title_activity_policy">Policy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Privacy Policy
    <string name="privacy_policy1">Methods of Research Aexe: An Augmented Reality Instructor Mobile Application on A Vigorous Lifestyle for Zamora Fitness Drive and Wellness Center built as free application for Zamora Fitness Drive and Wellness Center. </string>
    <string name="privacy_policy2">This page is to inform visitors about the policies for collecting, using, and disclosing Personal Information if they choose to use Aexe application. If the user uses this application Aexe, then the user agrees to the collection and use of data in accordance with this policy. </string>
    <string name="privacy_policy3">The application collects Personal Information in order to provide and improve the Service. The application does not use or share users’ information with anyone else. </string>
    <string name="privacy_policy4">Unless otherwise defined in this Privacy Policy, the terminology used in this Privacy Policy have the same meaning as in our Terms and Conditions, which are available at Aexe.</string>
    <string name="account_information">Account Information</string>
</resources>