<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_drawer_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_nav_drawer_feed"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_ar"
            android:icon="@drawable/ic_nav_drawer_ar"
            android:title="@string/menu_exercise" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_nav_drawer_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_nav_drawer_help"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_drawer_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>