<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.augmentedexercise.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.augmentedexercise.ui.gallery.GalleryFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ar"
        android:name="com.example.augmentedexercise.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_exercise"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.augmentedexercise.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.example.augmentedexercise.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.augmentedexercise.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>