<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".menu.Policy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/ic_close_white"/>

            <TextView
                android:id="@+id/acntinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:text="@string/action_privacy_policy"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/privacytitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/action_privacy_policy"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/privacy1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacytitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/privacy_policy1"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/privacy2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/privacy_policy2"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/privacy3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/privacy_policy3"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/privacy4"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/privacy_policy4"
                android:lineSpacingExtra="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="30dp"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>