<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E6EA"
    android:layout_gravity="center"
    tools:context=".ui.support.SupportFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_place"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img_gym" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_place"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="5dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tv_add"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/img_map" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/map"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="15dp"
            android:text="09062447988"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fb"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/num"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorLink="#D50000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fb"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:text="@string/gmail"
            android:textColor="@color/black"
            android:textColorLink="#D50000"
            android:textSize="18sp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="650dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/maroon"
                android:src="@drawable/ic_chat_white"
                android:tint="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>

</ScrollView>